Fix alignment for Rainbow Clouds

--- a/styles/rainbow.css
+++ b/styles/rainbow.css
@@ -141,12 +141,12 @@ div.color {
 
 .cloud.left {
     position: absolute;
-    left: -3%;
+    left: 1%;
 }
 
 .cloud.right {
     position: absolute;
-    left: 63%;
+    left: 67%;
 }
 
 .cloud:before {
